MDEV-11445 JSON_MERGE requires at least two arguments in MySQL, but not in MariaDB.

Create_func_json_merge::create_native fixed.